--- a/.github/workflows/deploy-to-console.yml
+++ b/.github/workflows/deploy-to-console.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Set env
-        run: echo "TEMP=$(echo ${secrets.PAGODA_CONSOLE_TOKEN:6} | base64 --decode)" >> $GITHUB_ENV 
+        run: echo "TEMP=$(echo ${${{secrets.PAGODA_CONSOLE_TOKEN}}:6} | base64 --decode)" >> $GITHUB_ENV 
       - name: Set env
         run: echo "GITHUB_REPO_FULL_NAME=$(echo ${TEMP%:*})" >> $GITHUB_ENV
     
