store temp secret

--- a/.github/workflows/deploy-to-console.yml
+++ b/.github/workflows/deploy-to-console.yml
@@ -17,7 +17,8 @@ jobs:
     steps:
       - name: Set env
         run: |
-          TEMP=$(echo ${${{secrets.PAGODA_CONSOLE_TOKEN}}:6} | base64 --decode)
+          TEMP_SECRET=${{secrets.PAGODA_CONSOLE_TOKEN}}
+          TEMP=$(echo ${TEMP_SECRET:6} | base64 --decode)
           echo "GITHUB_REPO_FULL_NAME=$(echo ${TEMP%:*})" >> $GITHUB_ENV
           echo "TEST=value" >> $GITHUB_ENV
       - name: upload secret
